# Kvet

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
X11Engine/: CMakeLists.txt
X11Engine/Assets/: CMakeLists.txt
X11Engine/Assets/Shaders/Clouds/: Clouds.slang  CloudsTexture.slang
X11Engine/Assets/Shaders/Stars/: Stars.hlsl  Stars.slang  Stars.spv
X11Engine/Assets/Shaders/StaticMesh/: StaticMeshPS.hlsl  StaticMeshVS.hlsl
X11Engine/Assets/Shaders/StaticModel/: StaticModel.slang
X11Engine/src/: CMakeLists.txt  main.cpp
X11Engine/src/Assets/Mesh/: Mesh.h
X11Engine/src/Camera/: CameraManager.cpp  CameraManager.h
X11Engine/src/Components/: CMakeLists.txt
X11Engine/src/Config/: AppConfig.cpp
X11Engine/src/Core/: CMakeLists.txt  Core.cpp  Core.h
X11Engine/src/Core/Config/: AppConfig.cpp  AppConfig.h
X11Engine/src/Core/Config/Graphics/: GraphicsConfig.h
X11Engine/src/Core/ECS/Entity/: CMakeLists.txt
X11Engine/src/Core/ECS/System/: CMakeLists.txt
X11Engine/src/Core/ECS/World/: CMakeLists.txt
X11Engine/src/Core/Event/: EventBus.h  EventSubscription.cpp  EventSubscription.h
X11Engine/src/Core/File/: CMakeLists.txt
X11Engine/src/Core/File/ModelReader/: CMakeLists.txt  ModelReader.cpp
X11Engine/src/Core/Graphics/: CMakeLists.txt  Graphics.cpp  Graphics.h  IRenderEngine.h
X11Engine/src/Core/Graphics/GraphicsCommunicationManager/: GraphicsCommunicationManager.h
X11Engine/src/Core/Graphics/Internal/: CMakeLists.txt  ResourceWrapper.h
X11Engine/src/Core/Graphics/Overlay/: CMakeLists.txt
X11Engine/src/Core/Graphics/RenderData/: CMakeLists.txt  CloudsData.h  StarsData.h
X11Engine/src/Core/Graphics/RenderEngine/: APIData.h  CMakeLists.txt  EngineData.h  FrameData.h  IRenderEngine.h  RenderEngine.cpp  RenderEngine.h  RenderEngineImpl.cpp  RenderEngineImpl.h
X11Engine/src/Core/Graphics/Renderer/: CMakeLists.txt  GraphicsInternalsForward.h  Renderer.cpp  Renderer.h  RendererImpl.cpp  RendererImpl.h
X11Engine/src/Core/Graphics/Renderers/: CMakeLists.txt
X11Engine/src/Core/Input/: PhysicalInput.h
X11Engine/src/Core/Logger/: CMakeLists.txt
X11Engine/src/Core/Physics/: CMakeLists.txt
X11Engine/src/Core/Physics/Resources/: CMakeLists.txt
X11Engine/src/Core/Physics/RigidBody/: CMakeLists.txt  DynamicRigidBody.cpp  DynamicRigidBody.h
X11Engine/src/Core/Physics/Scene/: PhysicsScene.cpp
X11Engine/src/Core/Physics/Shape/: Shape.h
X11Engine/src/Core/Script/: ScriptResources.cpp  ScriptResources.h
X11Engine/src/Core/Types/: CMakeLists.txt
X11Engine/src/Core/Window/: CMakeLists.txt  Window.cpp  Window.h  Window_old.cpp
X11Engine/src/Dependencies/: CMakeLists.txt  VMAUsage.cpp
X11Engine/src/ECS/Component/: ComponentPool.h  ComponentRegistry.h
X11Engine/src/ECS/Entity/: Entity.cpp  Entity.h
X11Engine/src/ECS/System/: SystemDispatcher.cpp
X11Engine/src/ECS/World/: World.h
X11Engine/src/Engine/: Engine.cpp  Engine.h
X11Engine/src/Event/: CMakeLists.txt  EventBus.h
X11Engine/src/FileReader/ImageReader/: CMakeLists.txt
X11Engine/src/Graphics/: CMakeLists.txt
X11Engine/src/Graphics/Renderer/: Renderer.cpp  Renderer.h
X11Engine/src/Input/: CMakeLists.txt
X11Engine/src/Logger/: LoggerFactory.h
X11Engine/src/Overlay/: Overlay.cpp  Overlay.h
X11Engine/src/Physics/Actor/: Actor.h
X11Engine/src/Physics/Resources/: Resources.cpp
X11Engine/src/Physics/RigidBody/: DynamicRigidBody.h  StaticRigidBody.h
X11Engine/src/Physics/Scene/: PhysicsScene.cpp  PhysicsScene.h
X11Engine/src/Physics/Shape/: Shape.cpp  Shape.h
X11Engine/src/Scene/: CMakeLists.txt  IScene.h  Scene.cpp  Scene.h
X11Engine/src/Scene/Sky/: CMakeLists.txt  Sky.cpp  Sky.h
X11Engine/src/Script/: CMakeLists.txt
X11Engine/src/Systems/: CMakeLists.txt
X11Engine/src/Types/: Transform.cpp  Transform.h
X11Engine/src/Types/Math/: Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h
X11Engine/src/Window/: Window.cpp  Window.h
X11Engine/test/Event/: EventBus_text.cpp
src/: CMakeLists.txt
src/Components/: CMakeLists.txt
src/Core/: CMakeLists.txt  Core.cpp
src/Core/Config/: AppConfig.cpp
src/Core/ECS/: CMakeLists.txt
src/Core/ECS/Component/: CMakeLists.txt  ComponentRegistry.h
src/Core/ECS/Entity/: Entity.cpp  Entity.h
src/Core/ECS/Query/: CMakeLists.txt
src/Core/ECS/System/: ISystem.h  SystemDispatcher.h
src/Core/Event/: CMakeLists.txt  Event.h  EventBus.cpp  EventListener.cpp  EventListener.h  EventSubscription.cpp  EventSubscription.h
src/Core/File/ModelReader/: ModelReader.cpp  ModelReader.h
src/Core/Graphics/: CMakeLists.txt  Graphics.h
src/Core/Graphics/GraphicsCommunicationManager/: CMakeLists.txt  GraphicsCommunicationManager.h
src/Core/Graphics/Overlay/: Overlay.cpp  Overlay.h
src/Core/Graphics/RenderData/: CloudsData.h  MeshHandle.h  StaticModelData.h  TextureHandle.h
src/Core/Graphics/RenderEngine/: CMakeLists.txt  EngineConstants.h  EngineData.h  FrameData.h  Queue.h  RenderEngine.cpp  RenderEngine.h
src/Core/Graphics/Renderers/: CMakeLists.txt
src/Core/Input/: CMakeLists.txt  InputContext.h  PhysicalInput.cpp
src/Core/Logger/: Logger.cpp  Logger.h  LoggerFactory.cpp
src/Core/Physics/Resources/: Resources.cpp  Resources.h
src/Core/Physics/RigidBody/: DynamicRigidBody.cpp  DynamicRigidBody.h  StaticRigidBody.cpp  StaticRigidBody.h
src/Core/Physics/Scene/: CMakeLists.txt  PhysicsScene.h
src/Core/Physics/Shape/: CMakeLists.txt
src/Core/Script/: CMakeLists.txt  ScriptResources.cpp
src/Core/Script/Bindings/: CMakeLists.txt  CoreBindings.cpp  CoreBindings.h
src/Core/Types/: CMakeLists.txt
src/Core/Types/Math/: Matrix.h  Quaternion.h  Vector3.cpp  Vector3.h
src/Core/Types/Result/: CMakeLists.txt  Result.h
src/Core/Types/Vertex/: CMakeLists.txt
src/Core/Utility/: CMakeLists.txt
src/Core/Window/: CMakeLists.txt  Window.cpp  Window.h
src/Engine/: Engine.cpp
src/Scene/: Scene.cpp
src/Scene/Sky/: Sky.cpp
src/Scene/Sky/Clouds/: Clouds.cpp
src/Scene/Sky/Stars/: Stars.h
src/Systems/PhysicsSystem/: CMakeLists.txt  PhysicsSystem.cpp  PhysicsSystem.h
(+263 files in other folders)
